Added test data and removed deprecated Integer/Long calls